<resources>
    <string name="app_name">Movie App</string>

    <!--<string name="action_clear_cache">Clear Image Cache</string>-->

    <string-array name="sort_prefrences_array">
        <item>Most Popular</item>
        <item>Top Rated</item>
        <item>Favorites</item>
    </string-array>

    <string name="preference_file_key">com.udacity.mal.movieapp.PREFERENCE_FILE_KEY</string>
    <string name="sort_order_shared_pref_key">sort_order</string>

    <string name="spinner_position_shared_pref_key">spinner_pos</string>

    <string name="fav_grid_position_shared_pref_key">fav_grid_pos</string>
    <string name="popular_grid_position_shared_pref_key">popular_grid_pos</string>
    <string name="top_rated_grid_position_shared_pref_key">top_rated_grid_pos</string>

    <string name="top_rated_key">top_rated</string>
    <string name="most_popular_key">most_popular</string>
    <string name="fav_only_key">favorites_only</string>

    <string name="poster_content_description">Movie Poster Image</string>
    <string name="title_activity_detail">Movie Details</string>
    <string name="movie_backdrop_image_content_description">Movie Backdrop Image</string>
    <string name="movie_poster_image_content_description">Movie Poster Image</string>
    <string name="trailer_play_button_content_description">Trailer Play Button</string>
    <string name="share_trailer">Share Trailer</string>
    <string name="review_author">Author</string>
    <string name="review_dummy_text">This is an awesome review for a great movie!</string>
    <string name="movie_title_dummy">Movie Title</string>
    <string name="release_date_dummy">Release Date</string>
    <string name="rating_dummy">Rating</string>
    <string name="add_to_fav_dummy">Add to Fav</string>
    <string name="reviews_button_text">Reviews</string>
    <string name="trailers_button_text">Trailers</string>
    <string name="plot_dummy">Plot</string>
    <string name="remove_fav_button_text">Remove from Fav</string>
    <string name="content_description_sad_face_trailers">Sad Face, Trailers unavailable</string>
    <string name="trailers_unavailable">Trailers Unavailable</string>
    <string name="reviews_unavailable">Reviews Unavailable</string>
    <string name="content_descriotion_sad_face_reviews">Sad Face, No Reviews Found!</string>
</resources>
