<com.nirhart.parallaxscroll.views.ParallaxScrollView xmlns:android="http://schemas.android.com/apk/res/android"
                                                     xmlns:tools="http://schemas.android.com/tools"
                                                     xmlns:app="http://schemas.android.com/apk/res-auto"
                                                     android:layout_width="match_parent"
                                                     android:layout_height="match_parent"
                                                     app:parallax_factor="1.9"
                                                     tools:context=".MovieDetailFragment">


    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/movie_detail_backdrop"
                android:contentDescription="@string/movie_backdrop_image_content_description"
                android:src="@drawable/placeholder_movie_details_image"
                android:layout_gravity="center_vertical"
                android:scaleType="centerCrop"
                />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.6">

                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="250dp"
                    android:id="@+id/movie_detail_poster"
                    android:src="@drawable/placeholder_movie_poster"
                    android:padding="16dp"
                    android:contentDescription="@string/movie_poster_image_content_description"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:paddingTop="35dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="@string/movie_title_dummy"
                        android:id="@+id/movie_detail_title"
                        android:padding="4dp"
                        android:layout_gravity="center_vertical"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/release_date_dummy"
                        android:id="@+id/movie_release_date"
                        android:padding="4dp"
                        android:layout_gravity="center_vertical"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/rating_dummy"
                        android:id="@+id/movie_detail_rating"
                        android:padding="4dp"
                        android:layout_gravity="center_vertical"/>

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/add_to_fav_dummy"
                        android:id="@+id/favButton"
                        android:layout_gravity="center_vertical"
                        />

                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/reviews_button_text"
                    android:textSize="20sp"
                    android:textColor="@color/colorAccent"
                    android:padding="16dp"
                    android:id="@+id/movie_detail_reviews_label"
                    android:layout_weight="0.5"
                    style="?android:attr/borderlessButtonStyle"/>


                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/trailers_button_text"
                    android:textSize="20sp"
                    android:textColor="@color/colorAccent"
                    android:padding="16dp"
                    android:id="@+id/movie_detail_trailers_label"
                    android:layout_weight="0.5"
                    style="?android:attr/borderlessButtonStyle"/>

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="16dp">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/plot_dummy"
                    android:id="@+id/movie_detail_plot"
                    android:padding="4dp"/>


            </LinearLayout>

        </LinearLayout>
    <!--</ScrollView>-->

</com.nirhart.parallaxscroll.views.ParallaxScrollView>
