<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/poster_card_view"
    android:layout_gravity="center"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/cardview_light_background"
    android:layout_margin="4dp"
    >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/holderBg">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="300dp"
            android:minHeight="200dp"
            android:id="@+id/poster_holder"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:contentDescription="@string/poster_content_description"
            android:src="@drawable/placeholder_movie_poster"
            android:layout_weight="0.8"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center_vertical"
            android:background="@color/holderBg"
            android:layout_weight="0.2"
            android:layout_margin="16dp"
            >

            <TextView
                android:id="@+id/movie_item_title"
                android:lines="1"
                android:textStyle="bold"
                android:singleLine="true"
                android:ellipsize="end"
                android:lineSpacingMultiplier="1.1"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/movie_title_dummy"
                android:textSize="18sp"
                />

            <TextView
                android:id="@+id/movie_item_genres"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:ellipsize="end"
                android:lineSpacingMultiplier="1.1"
                android:lines="1"
                android:text="@string/release_date_dummy"/>

        </LinearLayout>

    </LinearLayout>
</android.support.v7.widget.CardView>